--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -49,6 +49,8 @@ ro:
       unique_reference: Referință unică atașament
       unnumbered_hoc_paper: Document nenumerotat de la Camera Comunelor
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -458,6 +460,29 @@ ro:
         one: Declarație scrisă către Parlament
         other: Declarații scrise către Parlament
     updated: actualizat
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
