--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -49,6 +49,8 @@ sk:
       unique_reference: Jedinečný odkaz na prílohu
       unnumbered_hoc_paper: Nečíslovaný dokument Dolnej snemovne
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -459,6 +461,29 @@ sk:
         one: Písomné vyhlásenie pre Parlament
         other: Písomné vyhlásenia pre Parlament
     updated: aktualizované
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
