--- a/config/locales/uz.yml
+++ b/config/locales/uz.yml
@@ -49,6 +49,8 @@ uz:
       unique_reference: Илованинг махсус ҳаволаси
       unnumbered_hoc_paper: Жамоат Палатасининг рақамсиз ҳужжати
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ uz:
         one: Парламентга ёзма баёнот
         other: Парламентга ёзма баёнотлар
     updated: янгиланди
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
