--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -49,6 +49,8 @@ ar:
       unique_reference: المرجع الفريد للمرفق
       unnumbered_hoc_paper: ورقة مجلس عموم غير مرقمة
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -699,6 +701,29 @@ ar:
         two:
         zero:
     updated: تاريخ التحديث
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: rtl
   language_names:
