--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -49,6 +49,8 @@ bg:
       unique_reference: Уникална референция на прикачения файл
       unnumbered_hoc_paper: Документ без номер на Камарата на общините
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ bg:
         one: Писмено изявление в Парламента
         other: Писмени изявления в Парламента
     updated: актуализиран
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
