--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -49,6 +49,8 @@ cy:
       unique_reference: Cyfeirnod unigryw yr atodiad
       unnumbered_hoc_paper: Papur Tŷ'r Cyffredin heb rif
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -701,6 +703,29 @@ cy:
         two:
         zero:
     updated: diweddarwyd
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
