--- a/config/locales/da.yml
+++ b/config/locales/da.yml
@@ -49,6 +49,8 @@ da:
       unique_reference: Entydig reference til vedhæftet fil
       unnumbered_hoc_paper: Unummereret dokument fra Underhuset
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ da:
         one: Mundtlig erklæring til Parlamentet
         other: Mundtlige erklæring til Parlamentet
     updated: Opdateret
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
