--- a/config/locales/es-419.yml
+++ b/config/locales/es-419.yml
@@ -49,6 +49,8 @@ es-419:
       unique_reference: Referencia única del adjunto
       unnumbered_hoc_paper: Documento no numerado de la Cámara de los Comunes
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ es-419:
         one: Declaración escrita ante el Parlamento
         other: Declaraciones escritas ante el Parlamento
     updated: actualizado
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
