--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -49,6 +49,8 @@ es:
       unique_reference: Referencia única del adjunto
       unnumbered_hoc_paper: Documento de la Cámara de los Comunes sin numerar
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -375,6 +377,29 @@ es:
         one: Declaración escrita
         other: Declaraciones escritas
     updated: Actualizado
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
