--- a/config/locales/et.yml
+++ b/config/locales/et.yml
@@ -49,6 +49,8 @@ et:
       unique_reference: Manuse unikaalne viide
       unnumbered_hoc_paper: Nummerdamata alamkoja dokument
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ et:
         one: Kirjalik avaldus parlamendile
         other: Kirjalikud avaldused parlamendile
     updated: uuendatud
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
