--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -49,6 +49,8 @@ fr:
       unique_reference: Référence unique de la pièce jointe
       unnumbered_hoc_paper: Document non numéroté de la Chambre des Communes
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ fr:
         one: Déclaration écrite au Parlement
         other: Déclarations écrites au Parlement
     updated: mis à jour
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
