--- a/config/locales/gu.yml
+++ b/config/locales/gu.yml
@@ -49,6 +49,8 @@ gu:
       unique_reference: એટેચમેંટ યુનિક સંદર્ભ
       unnumbered_hoc_paper: સંખ્યા વિનાના હાઉસ ઓફ કૉમન્સ પેપર
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ gu:
         one: સંસદમાં લેખિત નિવેદન
         other: સંસદમાં લેખિત નિવેદનો
     updated: અપડેટ કરેલ
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
