--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -49,6 +49,8 @@ hi:
       unique_reference: अनुलग्नक अनूठा संदर्भ
       unnumbered_hoc_paper: संख्यारहित हाउस ऑफ कॉमन्स पेपर
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ hi:
         one: संसद में लिखित बयान
         other: संसद में लिखित बयान
     updated: अपडेट किया गया
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
