--- a/config/locales/hr.yml
+++ b/config/locales/hr.yml
@@ -49,6 +49,8 @@ hr:
       unique_reference: Jedinstvena referenca privitka
       unnumbered_hoc_paper: Nebrojeni papir Donjeg doma
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -459,6 +461,29 @@ hr:
         one: Pismena izjava Parlamentu
         other: Pismene izjave Parlamentu
     updated: ažurirano
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
