--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -49,6 +49,8 @@ ja:
       unique_reference: 添付固有の参照
       unnumbered_hoc_paper: 番号のない庶民院書類
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -294,6 +296,29 @@ ja:
       written_statement:
         other: 議会への書面による声明
     updated: 更新済み
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
