--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -49,6 +49,8 @@ ka:
       unique_reference: დანართის უნიკალური მითითება
       unnumbered_hoc_paper: თემთა პალატის დაუნომრავი დოკუმენტი
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ ka:
         one: წერილობითი განცხადება პარლამენტში
         other: წერილობითი განცხადებები პარლამენტში
     updated: განახლებულია
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
