--- a/config/locales/kk.yml
+++ b/config/locales/kk.yml
@@ -49,6 +49,8 @@ kk:
       unique_reference: Тіркеменің бірегей сілтемесі
       unnumbered_hoc_paper: Қауымдар палатасының нөмірленбеген саяси құжаты
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ kk:
         one: Парламентке жазбаша мәлімдеме
         other: Парламентке жазбаша мәлімдемелер
     updated: жаңартылды
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
