--- a/config/locales/lv.yml
+++ b/config/locales/lv.yml
@@ -49,6 +49,8 @@ lv:
       unique_reference: Pielikuma unikālā atsauce
       unnumbered_hoc_paper: Pārstāvju palātas dokuments bez numura
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -375,6 +377,29 @@ lv:
         one: Rakstisks ziņojums parlamentam
         other: Rakstiski ziņojumi parlamentam
     updated: atjaunināts
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
