--- a/config/locales/mt.yml
+++ b/config/locales/mt.yml
@@ -49,6 +49,8 @@ mt:
       unique_reference: Referenza unika tal-anness
       unnumbered_hoc_paper: Dokument mhux innumerat tal-House of Commons
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -537,6 +539,29 @@ mt:
         one: Dikjarazzjoni miktuba lill-Parlament
         other: Dikjarazzjonijiet miktuba lill-Parlament
     updated: aġġornat
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
