--- a/config/locales/ne.yml
+++ b/config/locales/ne.yml
@@ -49,6 +49,8 @@ ne:
       unique_reference: संलग्न विशिष्ट सन्दर्भ
       unnumbered_hoc_paper: संख्या नभएको हाउस अफ कमन्स पृष्ठ
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ ne:
         one: संसदमा लिखित वक्तव्य
         other: संसदमा लिखित वक्तव्यहरू
     updated: अद्यावधिक गरियो
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
