--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -49,6 +49,8 @@ nl:
       unique_reference: Unieke referentie bijvoegsel
       unnumbered_hoc_paper: Ongenummerd Lagerhuisdocument
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -375,6 +377,29 @@ nl:
         one: Schriftelijke verklaring aan het Parlement
         other: Schriftelijke verklaringen aan het Parlement
     updated: bijgewerkt
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
