--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -49,6 +49,8 @@
       unique_reference: Unik referanse for vedlegg
       unnumbered_hoc_paper: Unummerert skriv i Underhuset
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@
         one: Skriftlig uttalelse til Stortinget
         other: Skriftlige uttalelser til Stortinget
     updated: oppdatert
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
