--- a/config/locales/pa-pk.yml
+++ b/config/locales/pa-pk.yml
@@ -49,6 +49,8 @@ pa-pk:
       unique_reference: اٹیچمینٹ دا  وکھرا حوالہ
       unnumbered_hoc_paper: اَن نمبرڈ ہاؤس آف کامننز پیپر
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -375,6 +377,29 @@ pa-pk:
         one: قومی مجلس دے سامنے تحریری بیان
         other: قومی مجلس دے سامنے تحریری بیانات
     updated: تازہ ترین حال
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: rtl
   language_names:
