--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -49,6 +49,8 @@ pl:
       unique_reference: Niepowtarzalny numer referencyjny załącznika
       unnumbered_hoc_paper: Nienumerowany dokument Izby Gmin
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -537,6 +539,29 @@ pl:
         one: Pisemne oświadczenie przed parlamentem
         other: Pisemne oświadczenia przed parlamentem
     updated: Zaktualizowany
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
