--- a/config/locales/ps.yml
+++ b/config/locales/ps.yml
@@ -49,6 +49,8 @@ ps:
       unique_reference: ضمیمه ځانګړې حواله
       unnumbered_hoc_paper: د کامنز بې شمیره کاغذ
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ ps:
         one: پارلمان ته لیکلې وینا
         other: پارلمان ته لیکلي بیانونه
     updated: تازه شوی
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: rtl
   language_names:
