--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -49,6 +49,8 @@ ru:
       unique_reference: Уникальная ссылка приложения
       unnumbered_hoc_paper: Документ Палаты общин без номера
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -537,6 +539,29 @@ ru:
         one: Письменное заявление Парламенту
         other: Письменные заявления Парламенту
     updated: обновлено
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
