--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -49,6 +49,8 @@ sq:
       unique_reference: Referenca unike e bashkëngjitjes
       unnumbered_hoc_paper: Letër e panumëruar e Dhomës së Komuneve
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ sq:
         one: Deklaratë me shkrim në Parlament
         other: Deklarata me shkrim në Parlament
     updated: përditësuar
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
