--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -49,6 +49,8 @@ sv:
       unique_reference: Bilagans unika referens
       unnumbered_hoc_paper: Onumrerad artikel från underhuset
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -378,6 +380,29 @@ sv:
         one: Skriftligt uttalande till parlamentet
         other: Skriftliga uttalanden till parlamentet
     updated: uppdaterad
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
