--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -49,6 +49,8 @@ th:
       unique_reference: รหัสอ้างอิงเฉพาะของเอกสารแนบ
       unnumbered_hoc_paper: เอกสารสภาสามัญที่ไม่มีเลขที่
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -296,6 +298,29 @@ th:
       written_statement:
         other: แถลงการณ์เป็นลายลักษณ์อักษรต่อรัฐสภา
     updated: อัปเดตแล้ว
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
