--- a/config/locales/tk.yml
+++ b/config/locales/tk.yml
@@ -49,6 +49,8 @@ tk:
       unique_reference: Goşundy ýeketäk salgylanmasy
       unnumbered_hoc_paper: Jemgyýetçilik palatasy belisiz kagyzy
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ tk:
         one: Mejlise ýazmaça beýan
         other: Mejlise ýazmaça beýanlar
     updated: täzelenen
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
