--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -49,6 +49,8 @@ tr:
       unique_reference: Ek benzersiz referans
       unnumbered_hoc_paper: Sayı Verilmemiş Avam Kamarası evrakı
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ tr:
         one: Parlamentoya yazılı açıklama
         other: Parlamentoya yazılı açıklamalar
     updated: güncellenen
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
