--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -49,6 +49,8 @@ uk:
       unique_reference: Унікальний номер додатку
       unnumbered_hoc_paper: Документ Палати громад без номеру
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -539,6 +541,29 @@ uk:
         one: Письмова заява до Парламенту
         other: Письмові заяви до Парламенту
     updated: оновлено
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
