--- a/config/locales/ur.yml
+++ b/config/locales/ur.yml
@@ -49,6 +49,8 @@ ur:
       unique_reference: منسلکہ کا منفرد حوالہ
       unnumbered_hoc_paper: غیر نمبر شدہ ہاؤس آف کامنز کا صفحہ
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -377,6 +379,29 @@ ur:
         one: پالیمان کے لیے تحریری بیان
         other: پالیمان کے لیے تحریری بیانات
     updated: اپ ڈیٹ کردہ
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: rtl
   language_names:
