--- a/config/locales/zh-hk.yml
+++ b/config/locales/zh-hk.yml
@@ -49,6 +49,8 @@ zh-hk:
       unique_reference: 附件單一參考
       unnumbered_hoc_paper: 未編號之下議院文書
   admin:
+    feedback:
+      show_banner:
     whats_new:
       guidance:
         body_govspeak:
@@ -296,6 +298,29 @@ zh-hk:
       written_statement:
         other: 提交國會的書面聲明
     updated: 已更新
+  emergency_banner:
+    actions:
+      confirm_destroy:
+      create:
+      destroy:
+      edit:
+    errors:
+      campaign_class:
+      heading:
+    keys:
+      campaign_class:
+      campaign_classes:
+        local_emergency:
+        national_emergency:
+        notable_death:
+      heading:
+      link:
+      link_text:
+      short_description:
+    status:
+      deployed:
+      not_deployed:
+    update_information:
   i18n:
     direction: ltr
   language_names:
